# ai-back

./: .dockerignore  .envrc  .gitattributes  .gitignore  Cargo.toml  Dockerfile  justfile  note.md  server.thunder_collection.json  todo.md
.cargo/: config.toml
configuration/: application.ron  ressources.ron
configuration/diffusion/: lmts.ron  tokenizer.ron  unet.ron  vae.ron
crate/actors/: Cargo.toml
crate/actors/src/: error.rs  lib.rs
crate/actors/src/supervisor/: mod.rs
crate/actors/src/worker/: control.rs  diffusion.rs  llama.rs  mod.rs  sentiment.rs  summarize.rs  translation.rs
crate/actors/tests/: helper.rs  input.rs  map.rs  mod.rs
crate/csrf/: Cargo.toml
crate/csrf/src/: lib.rs
crate/loader/: Cargo.toml
crate/loader/src/: http1.rs  http2.rs  lib.rs
crate/models/: Cargo.toml
crate/models/src/: lib.rs  sentiment.rs  summarize.rs  translation.rs
crate/models/src/diffusion/: mod.rs
crate/models/src/diffusion/configuration/: mod.rs
crate/models/src/diffusion/pipe/: mod.rs
crate/models/src/diffusion/text_transformer/: mod.rs  transformer.rs
crate/models/src/diffusion/tokenizer/: constants.rs  mod.rs
crate/models/src/diffusion/unet/: embeddings.rs  mod.rs  model.rs
crate/models/src/diffusion/unet/schedulers/: ddim.rs  integrate.rs  lms_discrete.rs  mod.rs
crate/models/src/diffusion/utils/: bar.rs  mod.rs
crate/models/src/diffusion/vae/: model.rs  models.rs
crate/models/src/llama/: mod.rs  model.rs  tokenizer.rs
crate/models/tests/: diffusion.rs  sentiment.rs  summarize.rs  translation.rs
crate/server/: Cargo.toml
crate/server/src/: lib.rs
crate/server/src/app/: mod.rs
crate/server/src/app/private/: logout.rs  mod.rs  profile.rs  route.rs  sse.rs
crate/server/src/app/private/command/: mod.rs
crate/server/src/app/private/command/playload/: kill.rs  mod.rs  pause.rs  process.rs  resume.rs  spawn.rs
crate/server/src/app/public/: login.rs  mod.rs  route.rs
crate/server/src/cors/: mod.rs
crate/server/src/db/: mod.rs  model.rs
crate/server/src/tls/: mod.rs
crate/server/tests/: framework.rs  mod.rs  query.rs  sse.rs  utils.rs
crate/shared/: Cargo.toml
crate/shared/src/: constants.rs  lib.rs  tools.rs
crate/shared/src/command/: mod.rs
crate/shared/src/command/instruction/: kill.rs  mod.rs  pause.rs  process.rs  resume.rs  spawn.rs
crate/shared/src/config/: mod.rs  path.rs
crate/shared/src/message/: emit.rs  mod.rs
crate/shared/src/model/: mod.rs
crate/shared/src/types/: command.rs  message.rs  mod.rs  model.rs
docker/: .env
docker/migrations/: 20230607150529_auth.up.sql
src/: main.rs
ssl/server/: ionos.crt  ionos.key
wiki/: LICENSE  dock.md  ion.md
