[package]
name = "airs"
version = "0.1.0"
authors = ["elayar.yacine@gmail.com"]
edition = "2021"

[dependencies]
clap = { workspace = true }
loader = { workspace = true }
tokio = { workspace = true }
models = { workspace = true }
server = { workspace = true }

[workspace]
members = [
  "crate/server",
  "crate/actors",
  "crate/models",
  "crate/loader",
  "crate/shared",
  "crate/csrf",
]

[workspace.dependencies]
futures = "0.3.27"
futures-util = "0.3.27"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
rust-bert = { git = "https://github.com/guillaume-be/rust-bert", rev = "ba57704" }
tch = "0.13.0"
diffusers = "0.3.0"
torch-sys = "0.13"
indicatif = {version = "0.17.3", features = ["rayon"]}
clap = { version = "4.0.19", features = ["derive"] }
shared = { path = "./crate/shared" }
actors = { path = "./crate/actors"  }
models = { path = "./crate/models"  }
loader = { path = "./crate/loader"  }
server = { path = "./crate/server"  }
csrf = { path = "./crate/csrf"  }

