[package]
name = "actors"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
shared = { workspace = true }
models = { workspace = true }

dashmap = "5.4.0"
config = { version = "0.13.3", default-features = false, features = ["yaml", "ron", "toml"] }

[lib]
name = "actors"
path = "src/lib.rs"

[dev-dependencies]
console-subscriber = "0.1.8"
futures = { workspace = true }