[package]
name = "csrf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-core = "0.3.3"
http = "0.2.9"
async-trait = "0.1.68"
rand = "0.8.5"
bcrypt = "0.14.0"
time = { version = "0.3.20", default-features = false, features = ["std"] }
base64 = "0.21.0"
cookie = { version = "0.17.0", features = [
    "percent-encode",
    "signed",
    "private",
] }

[lib]
name = "csrf"
path = "src/lib.rs"

[dev-dependencies]
